# cricket_winprob

./: .gitignore  README.md  pyproject.toml
.claude/skills/paper-sync/: SKILL.md
.claude/skills/regen-reports/: SKILL.md
paper/: draft_01_02.md  draft_03_05.md  draft_06_07.md  draft_08_10.md  make_figures.py  references.md  scaffold.md
reports/: baseline_comparison.md  correlation_experiment.md  dependence_decomposition.md  era_adjustment.md  leverage_validation.md  m2_5_diagnostics.md  player_leverage.md  player_uncertainty.md  tail_diagnostics.md  validation_report.md  wpa.md
src/: baseline.py  config.py  correlation_experiment.py  dependence_decomposition.py  era_adjust.py  ingest.py  leverage.py  m2_5_diagnostics.py  outcome_model.py  player_leverage.py  player_uncertainty.py  state.py  tail_diagnostics.py  validation.py  wp_markov.py  wpa.py
tests/: test_baseline.py  test_correlation_experiment.py  test_dependence.py  test_ingest.py  test_leverage.py  test_outcome_model.py  test_player_uncertainty.py  test_wp_core.py
