[project]
name = "cricket-leverage"
version = "0.1.0"
description = "Win-probability and leverage-index engine for IPL second-innings run chases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.2.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100
target-version = "py312"
